--- a/playbooks/configure-rhel-rdma.yml
+++ b/playbooks/configure-rhel-rdma.yml
@@ -29,10 +29,10 @@
     bm_prefix: "bm-node-"
     cluster_ssh_user: "{{ cluster_ssh_user | default(ansible_user) | default('opc') }}"
   tasks:
-    - name: Ensure RHEL nodes are registered and prepared (head + BM)
+    - name: Ensure RHEL nodes are registered and prepared (BM nodes; skip Oracle Linux head)
       include_role:
         name: rhel_prep
-      when: ansible_os_family == "RedHat"
+      when: ansible_distribution == "RedHat"
 
 - name: RDMA authentication and re-auth timer (BM cluster network only)
   hosts: bm
